# OpenCode-Python-SDK

./: .gitignore  DEMO.md  LICENSE  Makefile  README.md  demo.py  event_demo.py  pyproject.toml  quick_demo.py  requirements-dev.txt  requirements.txt  setup.py  stream_chat_test.py  test_fix.py  trigger_events.py
docs/: API_REFERENCE.md  app.md  auth.md  command.md  config.md  event.md  file.md  find.md  formatter.md  global.md  instance.md  lsp.md  mcp.md  path.md  project.md  provider.md  pty.md  session.md  tool.md  tui.md  vcs.md
examples/: advanced_resources_usage.py  basic_usage.py  core_resources_usage.py  event_usage.py  session_usage.py
opencode_sdk/: __init__.py  client.py  exceptions.py  http_client.py  sse_client.py  utils.py  version.py
opencode_sdk/models/: __init__.py  common.py  config.py  events.py  file.py  message.py  other.py  provider.py  session.py
opencode_sdk/resources/: __init__.py  app.py  auth.py  base.py  command.py  config.py  event.py  file.py  find.py  formatter.py  global_resource.py  instance.py  lsp.py  mcp.py  path.py  project.py  provider.py  pty.py  session.py  tool.py  tui.py  vcs.py
